--- a/app.css
+++ b/app.css
@@ -1,7 +1,12 @@
-.gray {
-    background-color: gray
+.red {
+    background-color: red
 }
-
+.black {
+    background-color:black;
+}
+body {
+    color: yellow;
+}
 .show-grid {
     margin-bottom: 15px;
     text-align: center;
@@ -12,4 +17,7 @@
     padding-bottom: 10px;
     border: 1px solid #ddd;
     border: 1px solid rgba(86,61,124,.2);
+}
+.CristoRey {
+    text-align: center
 }
